// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSite() works 1`] = `
Object {
  "archive": Object {
    "base_url": "https://sfgov.org/old-url",
  },
  "hostnames": Array [
    "www.sfgov.org",
  ],
  "path": "__tests__/__fixtures__/basic-site.yml",
  "redirects": Array [
    Object {
      "map": Object {
        "/": "https://sf.gov/new-url",
      },
    },
  ],
}
`;

exports[`loadSites() works 1`] = `
Array [
  Object {
    "archive": Object {
      "base_url": "https://sfgov.org/old-url",
    },
    "hostnames": Array [
      "www.sfgov.org",
    ],
    "path": "__tests__/__fixtures__/basic-site.yml",
    "redirects": Array [
      Object {
        "map": Object {
          "/": "https://sf.gov/new-url",
        },
      },
    ],
  },
]
`;
